manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 2
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - image: leariel98/test
        name: test
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
